// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar normal screen size should match snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  padding: 0 10px 0 5px;
  position: fixed;
  text-transform: uppercase;
  top: 0;
  width: 100%;
  z-index: 100;
}

.c0 .nav__icon {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  padding: 0 5px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
}

.c0 .nav__icon:focus,
.c0 .nav__icon:hover {
  background-color: rgba(42,49,50,0.6);
}

.c0 .nav__right {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  font-weight: 700;
  height: 40px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c1 li {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:after {
  content: '';
  display: block;
  height: 2px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: width;
  transition-property: width;
  width: 0px;
}

.c1 a:focus {
  outline: none;
}

.c1 a:focus:after,
.c1 a:hover:after,
.c1 a:active:after {
  width: 100%;
}

.c1 .nav__link_active a {
  color: #1A1A1A;
}

<div>
  <nav
    class="c0"
  >
    <a
      class="nav__icon"
      href="/"
    >
      <svg
        aria-label="ProHits-viz icon"
        height="30"
        role="img"
        viewBox="0 0 252.072 248.163"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          ProHits-viz
        </title>
        <desc>
          icon
        </desc>
        <lineargradient
          gradientTransform="matrix(0.8634 -0.5044 0.6326 1.0828 -55.1724 54.1383)"
          gradientUnits="userSpaceOnUse"
          id="SVGID_1_"
          x1="75.4634"
          x2="75.4634"
          y1="184.9697"
          y2="-15.0835"
        >
          <stop
            offset="0.386"
            style="stop-color: rgb(238, 238, 238);"
          />
          <stop
            offset="1"
            style="stop-color: rgb(238, 238, 238); stop-opacity: 0;"
          />
        </lineargradient>
        <polygon
          fill="url(#SVGID_1_)"
          points="101.026,231.381 0,0 152.898,201.226 "
        />
        <circle
          cx="128.036"
          cy="218.163"
          fill="#eee"
          r="30"
        />
        <lineargradient
          gradientTransform="matrix(0.8686 0.4955 -0.6214 1.0892 153.9728 -22.0796)"
          gradientUnits="userSpaceOnUse"
          id="SVGID_2_"
          x1="96.6611"
          x2="96.6611"
          y1="176.5947"
          y2="-23.4688"
        >
          <stop
            offset="0.386"
            style="stop-color: rgb(238, 238, 238);"
          />
          <stop
            offset="1"
            style="stop-color: rgb(238, 238, 238); stop-opacity: 0;"
          />
        </lineargradient>
        <polygon
          fill="url(#SVGID_2_)"
          points="102.204,203.182 252.072,0 154.256,233.027"
        />
      </svg>
    </a>
    <div
      class="nav__right"
    >
      <ul
        class="c1"
      >
        <li
          class="nav__link"
        >
          <a
            href="/analysis"
          >
            analysis
          </a>
        </li>
        <li
          class="nav__link"
        >
          <a
            href="/visualization"
          >
            visualization
          </a>
        </li>
        <li
          class="nav__link"
        >
          <a
            href="/news"
          >
            news
          </a>
        </li>
        <li
          class="nav__link"
        >
          <a
            href="/help"
          >
            help
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navbar small screen size should match snapshot 1`] = `
.c1 {
  margin-right: 8px;
  position: relative;
  z-index: 20;
}

.c1 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.c1 button:focus {
  outline: 0;
}

.c1 .nav__menu {
  height: 20px;
  width: 25px;
}

.c1 .nav__menu > * {
  -webkit-transition: fill 0.3s ease;
  transition: fill 0.3s ease;
}

.c1 ul {
  background-color: #fff;
  border-radius: 2px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
  margin: 0;
  list-style: none;
  padding: 10px;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: 97% 2%;
  -ms-transform-origin: 97% 2%;
  transform-origin: 97% 2%;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: all;
  transition-property: all;
}

.c1 li {
  padding: 2px 5px;
  text-transform: uppercase;
}

.c1 a {
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c1 a:after {
  content: '';
  display: block;
  height: 1px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: width;
  transition-property: width;
  width: 0px;
}

.c1 a:focus {
  outline: none;
}

.c1 a:focus:after,
.c1 a:hover:after,
.c1 a:active:after {
  width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  padding: 0 10px 0 5px;
  position: fixed;
  text-transform: uppercase;
  top: 0;
  width: 100%;
  z-index: 100;
}

.c0 .nav__icon {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  padding: 0 5px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
}

.c0 .nav__icon:focus,
.c0 .nav__icon:hover {
  background-color: rgba(42,49,50,0.6);
}

.c0 .nav__right {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
}

<div>
  <nav
    class="c0"
  >
    <a
      class="nav__icon"
      href="/"
    >
      <svg
        aria-label="ProHits-viz icon"
        height="30"
        role="img"
        viewBox="0 0 252.072 248.163"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          ProHits-viz
        </title>
        <desc>
          icon
        </desc>
        <lineargradient
          gradientTransform="matrix(0.8634 -0.5044 0.6326 1.0828 -55.1724 54.1383)"
          gradientUnits="userSpaceOnUse"
          id="SVGID_1_"
          x1="75.4634"
          x2="75.4634"
          y1="184.9697"
          y2="-15.0835"
        >
          <stop
            offset="0.386"
            style="stop-color: rgb(238, 238, 238);"
          />
          <stop
            offset="1"
            style="stop-color: rgb(238, 238, 238); stop-opacity: 0;"
          />
        </lineargradient>
        <polygon
          fill="url(#SVGID_1_)"
          points="101.026,231.381 0,0 152.898,201.226 "
        />
        <circle
          cx="128.036"
          cy="218.163"
          fill="#eee"
          r="30"
        />
        <lineargradient
          gradientTransform="matrix(0.8686 0.4955 -0.6214 1.0892 153.9728 -22.0796)"
          gradientUnits="userSpaceOnUse"
          id="SVGID_2_"
          x1="96.6611"
          x2="96.6611"
          y1="176.5947"
          y2="-23.4688"
        >
          <stop
            offset="0.386"
            style="stop-color: rgb(238, 238, 238);"
          />
          <stop
            offset="1"
            style="stop-color: rgb(238, 238, 238); stop-opacity: 0;"
          />
        </lineargradient>
        <polygon
          fill="url(#SVGID_2_)"
          points="102.204,203.182 252.072,0 154.256,233.027"
        />
      </svg>
    </a>
    <div
      class="nav__right"
    >
      <div
        class="c1"
      >
        <button
          aria-label="navigation menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-bars fa-w-14 fa-lg fa-rotate-null fa-pull-null nav__menu"
            data-icon="bars"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
        </button>
        <ul
          style="transform: scale(0);"
        >
          <li>
            <a
              href="/analysis"
            >
              analysis
            </a>
          </li>
          <li>
            <a
              href="/visualization"
            >
              visualization
            </a>
          </li>
          <li>
            <a
              href="/news"
            >
              news
            </a>
          </li>
          <li>
            <a
              href="/help"
            >
              help
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
